--- a/index.html
+++ b/index.html
@@ -17,11 +17,80 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@Lovable" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <style>
+      /* Hide Google Translate Toolbar */
+      .goog-te-banner-frame.skiptranslate {
+        display: none !important;
+      }
+      body {
+        top: 0px !important;
+      }
+      /* Customize Widget Look */
+      .goog-te-gadget-simple {
+        background-color: transparent !important;
+        border: none !important;
+        padding: 0 !important;
+        font-size: 12px !important;
+      }
+      .goog-te-gadget-simple .goog-te-menu-value {
+        color: #333 !important;
+      }
+      /* Hide Google Icon in Widget */
+      .goog-te-gadget-icon {
+        display: none !important;
+      }
+      /* Remove borders/separators */
+      .goog-te-menu-value span {
+        border-left: none !important;
+      }
+      /* Hide "Powered by Google" text and logo */
+      .goog-te-gadget {
+        color: transparent !important;
+      }
+      .goog-logo-link {
+        display: none !important;
+      }
+    </style>
   </head>
 
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <!-- Google Translate Widget -->
+    <div style="position: fixed; bottom: 90px; right: 20px; z-index: 1000;">
+      <div id="google_translate_element" style="display: none; position: absolute; bottom: 70px; right: 0; background-color: white; padding: 6px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.2); min-width: 100px;"></div>
+      <div onclick="toggleGoogleTranslate()" style="cursor: pointer; background-color: white; width: 60px; height: 60px; border-radius: 50%; display: flex; align-items: center; justify-content: center; box-shadow: 2px 2px 10px rgba(0,0,0,0.2); transition: transform 0.3s;" onmouseover="this.style.transform='scale(1.1)'" onmouseout="this.style.transform='scale(1)'">
+        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 48 48">
+          <path fill="#EA4335" d="M24 9.5c3.54 0 6.63 1.22 9.02 3.45l6.63-6.63C35.87 2.65 30.35 0 24 0 14.61 0 6.52 5.38 2.56 13.22l7.98 6.19C12.43 13.72 17.74 9.5 24 9.5z"/>
+          <path fill="#4285F4" d="M46.98 24.55c0-1.57-.15-3.09-.38-4.55H24v9.02h12.94c-.58 2.96-2.26 5.48-4.78 7.18l7.73 6.19c4.51-4.18 7.09-10.45 7.09-17.84z"/>
+          <path fill="#FBBC05" d="M10.53 28.59c-.48-1.45-.76-2.99-.76-4.59s.27-3.14.76-4.41L2.56 13.41C.92 16.46 0 20.12 0 24c0 3.88.92 7.54 2.56 10.78l7.97-6.19z"/>
+          <path fill="#34A853" d="M24 48c6.48 0 11.93-2.13 15.89-5.81l-7.73-6.19c-2.14 1.44-4.9 2.3-8.16 2.3-6.26 0-11.57-4.22-13.47-9.91l-7.98 6.19C6.51 42.62 14.61 48 24 48z"/>
+          <path fill="none" d="M0 0h48v48H0z"/>
+        </svg>
+      </div>
+    </div>
+    <script type="text/javascript">
+      function googleTranslateElementInit() {
+        new google.translate.TranslateElement({pageLanguage: 'en', includedLanguages: 'hi,en,bn,te,mr,ta,ur,gu,kn,ml,pa', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
+      }
+      function toggleGoogleTranslate() {
+        var x = document.getElementById('google_translate_element');
+        if (x.style.display === 'none') {
+          x.style.display = 'block';
+          var interval = setInterval(function() {
+            var dropdown = x.querySelector('.goog-te-menu-value');
+            if (dropdown) {
+              dropdown.click();
+              clearInterval(interval);
+            }
+          }, 50);
+          setTimeout(function() { clearInterval(interval); }, 1000);
+        } else {
+          x.style.display = 'none';
+        }
+      }
+    </script>
+    <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     <!-- WhatsApp Chat Button -->
     <a href="https://wa.me/917535021231" target="_blank" rel="noopener noreferrer" style="position: fixed; bottom: 20px; right: 20px; z-index: 1000; background-color: #25D366; color: white; width: 60px; height: 60px; border-radius: 50%; display: flex; align-items: center; justify-content: center; box-shadow: 2px 2px 10px rgba(0,0,0,0.2); transition: transform 0.3s;" onmouseover="this.style.transform='scale(1.1)'" onmouseout="this.style.transform='scale(1)'">
       <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" viewBox="0 0 16 16">
